little header/footer stretching fix;

--- a/src/bem/footer/footer.scss
+++ b/src/bem/footer/footer.scss
@@ -19,7 +19,7 @@
    flex-shrink: 0;
    flex-grow: 1;
 
-   flex-basis: 1180px;
+   flex-basis: 1160px;
 }
 .footer__col-left-content {
    flex-shrink: 1;
