--- a/src/bem/header/header.scss
+++ b/src/bem/header/header.scss
@@ -24,7 +24,7 @@
    flex-shrink: 0;
    flex-grow: 1;
 
-   flex-basis: 1180px;
+   flex-basis: 1160px;
 }
 @media only screen and (max-width: 1180px) {
    .header__content {
